--- a/src/me/lejenome/kanban_board_lite/client/boards/projects.fxml
+++ b/src/me/lejenome/kanban_board_lite/client/boards/projects.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.TilePane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112"
             fx:controller="me.lejenome.kanban_board_lite.client.boards.ProjectController">
@@ -11,11 +13,19 @@
         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
                 <Button mnemonicParsing="false" onAction="#refresh" text="Refresh"/>
-                <Button defaultButton="true" mnemonicParsing="false" onAction="#view" text="View"/>
+                <Button defaultButton="true" mnemonicParsing="false" text="View"/>
             </items>
         </ToolBar>
     </top>
     <center>
-        <ListView fx:id="projectsList" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER"/>
+        <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" BorderPane.alignment="CENTER">
+            <content>
+                <TilePane fx:id="projectsList" hgap="10.0" tileAlignment="TOP_LEFT" vgap="10.0">
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </TilePane>
+            </content>
+        </ScrollPane>
     </center>
 </BorderPane>
