--- a/src/me/lejenome/kanban_board_lite/client/boards/projects.fxml
+++ b/src/me/lejenome/kanban_board_lite/client/boards/projects.fxml
@@ -7,13 +7,13 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.TilePane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112"
+            minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.65"
             fx:controller="me.lejenome.kanban_board_lite.client.boards.ProjectController">
     <top>
         <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <items>
-                <Button mnemonicParsing="false" onAction="#refresh" text="Refresh"/>
-                <Button defaultButton="true" mnemonicParsing="false" text="View"/>
+                <Button defaultButton="true" mnemonicParsing="false" onAction="#refresh" text="Refresh"/>
+                <Button fx:id="usersBtn" mnemonicParsing="false" onAction="#users" text="Users" textAlignment="CENTER"/>
             </items>
         </ToolBar>
     </top>
