--- a/src/me/lejenome/kanban_board_lite/client/boards/projects.fxml
+++ b/src/me/lejenome/kanban_board_lite/client/boards/projects.fxml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
             minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.65"
             fx:controller="me.lejenome.kanban_board_lite.client.boards.ProjectController">
@@ -14,6 +11,8 @@
             <items>
                 <Button defaultButton="true" mnemonicParsing="false" onAction="#refresh" text="Refresh"/>
                 <Button fx:id="usersBtn" mnemonicParsing="false" onAction="#users" text="Users" textAlignment="CENTER"/>
+                <HBox HBox.hgrow="ALWAYS"/>
+                <Button mnemonicParsing="false" onAction="#account" text="Account"/>
             </items>
         </ToolBar>
     </top>
