--- a/src/me/lejenome/kanban_board_lite/client/boards/ticket.fxml
+++ b/src/me/lejenome/kanban_board_lite/client/boards/ticket.fxml
@@ -4,7 +4,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112"
+            minWidth="-Infinity"
+            prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65"
             fx:controller="me.lejenome.kanban_board_lite.client.boards.TicketEditController">
     <children>
         <GridPane layoutX="200.0" layoutY="155.0" prefHeight="282.0" prefWidth="572.0" AnchorPane.leftAnchor="14.0"
@@ -60,5 +61,7 @@
                 <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel" text="Cancel"/>
             </buttons>
         </ButtonBar>
+        <Button layoutX="14.0" layoutY="353.0" mnemonicParsing="false" onAction="#delete" style="-fx-base: #ee2211;"
+                text="Delete" fx:id="deleteBtn"/>
     </children>
 </AnchorPane>
